--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title> 2048 demo </title>
     <!-- 设置编码 -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- 设置风格 -->
     <link rel="stylesheet" href="style/animation.css">
