--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- 设置图标 -->
+    <link rel="icon" href="image/logo.png" type="image/png"> 
     <!-- 设置风格 -->
     <link rel="stylesheet" href="style/animation.css">
     <link rel="stylesheet" href="style/grid.css">
