--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <title> 2048 demo </title>
+    <title> 2048 Game </title>
     <!-- 设置编码 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="style/grid.css">
     <link rel="stylesheet" href="style/ui_style.css">
     <link rel="stylesheet" href="icon/iconfont.css">
+    <!-- 预加载图片 -->
+    <link rel="preload" href="image/cyber.jpg" as="image"> 
 </head>
 
 <body>
